correction contraste progress bar - text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,7 +164,7 @@ footer {
 #progress-bar {
     width: 0;
     height: 100%;
-    background-color: #4caf50;
+    background-color: #2C632E;
     transition: width 1s linear;
     position: relative;
     border-radius: 10px;
